// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table custom_class.js 1`] = `
<Table
  className="ui striped celled table"
  columns={
    Array [
      Object {
        "label": "ID",
        "name": "id",
      },
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ]
  }
  data={
    Array [
      Object {
        "email": "mike@gmail.com",
        "id": 11,
        "name": "Mike",
      },
      Object {
        "email": "helen@gmail.com",
        "id": 22,
        "name": "Helen",
      },
      Object {
        "email": "bob@gmail.com",
        "id": 33,
        "name": "Bob",
      },
    ]
  }
  hideBottomPaginator={false}
  name="table"
  noDataMessage="There is no data"
  perPage={50}
  saveSettings={false}
  showRowNumber={false}
/>
`;

exports[`table custom_column_render.js 1`] = `
<Table
  className="ui unstackable compact table"
  columns={
    Array [
      Object {
        "label": "ID",
        "name": "id",
      },
      Object {
        "label": "Name",
        "name": "name",
        "render": [Function],
      },
      Object {
        "label": "Email",
        "name": "email",
        "render": [Function],
      },
    ]
  }
  data={
    Array [
      Object {
        "email": "mike@gmail.com",
        "id": 11,
        "name": "Mike",
      },
      Object {
        "email": "helen@gmail.com",
        "id": 22,
        "name": "Helen",
      },
      Object {
        "email": "bob@gmail.com",
        "id": 33,
        "name": "Bob",
      },
    ]
  }
  hideBottomPaginator={false}
  name="table"
  noDataMessage="There is no data"
  perPage={50}
  saveSettings={false}
  showRowNumber={false}
/>
`;

exports[`table hide_bottom_pagination.js 1`] = `
<Table
  className="ui unstackable compact table"
  columns={
    Array [
      Object {
        "label": "ID",
        "name": "id",
      },
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ]
  }
  data={
    Array [
      Object {
        "email": "mike@gmail.com",
        "id": 11,
        "name": "Mike",
      },
      Object {
        "email": "helen@gmail.com",
        "id": 22,
        "name": "Helen",
      },
      Object {
        "email": "bob@gmail.com",
        "id": 33,
        "name": "Bob",
      },
    ]
  }
  hideBottomPaginator={true}
  name="table"
  noDataMessage="There is no data"
  perPage={2}
  saveSettings={false}
  showRowNumber={false}
/>
`;

exports[`table save_sort_and_filter_settings.js 1`] = `
<Table
  className="ui unstackable compact table"
  columns={
    Array [
      Object {
        "label": "ID",
        "name": "id",
      },
      Object {
        "filter": true,
        "label": "Name",
        "name": "name",
        "sort": true,
      },
      Object {
        "filter": true,
        "label": "Email",
        "name": "email",
        "sort": true,
      },
    ]
  }
  data={
    Array [
      Object {
        "email": "mike@gmail.com",
        "id": 11,
        "name": "Mike",
      },
      Object {
        "email": "helen@gmail.com",
        "id": 22,
        "name": "Helen",
      },
      Object {
        "email": "bob@gmail.com",
        "id": 33,
        "name": "Bob",
      },
    ]
  }
  hideBottomPaginator={false}
  name="table"
  noDataMessage="There is no data"
  perPage={50}
  saveSettings={true}
  showRowNumber={false}
/>
`;

exports[`table show_filters_and_sorts.js 1`] = `
<Table
  className="ui unstackable compact table"
  columns={
    Array [
      Object {
        "label": "ID",
        "name": "id",
      },
      Object {
        "filter": true,
        "label": "Name",
        "name": "name",
        "sort": true,
      },
      Object {
        "filter": true,
        "label": "Email",
        "name": "email",
        "sort": true,
      },
    ]
  }
  data={
    Array [
      Object {
        "email": "mike@gmail.com",
        "id": 11,
        "name": "Mike",
      },
      Object {
        "email": "helen@gmail.com",
        "id": 22,
        "name": "Helen",
      },
      Object {
        "email": "bob@gmail.com",
        "id": 33,
        "name": "Bob",
      },
    ]
  }
  hideBottomPaginator={false}
  name="table"
  noDataMessage="There is no data"
  perPage={50}
  saveSettings={false}
  showRowNumber={false}
/>
`;

exports[`table show_row_number.js 1`] = `
<Table
  className="ui unstackable compact table"
  columns={
    Array [
      Object {
        "label": "ID",
        "name": "id",
      },
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ]
  }
  data={
    Array [
      Object {
        "email": "mike@gmail.com",
        "id": 11,
        "name": "Mike",
      },
      Object {
        "email": "helen@gmail.com",
        "id": 22,
        "name": "Helen",
      },
      Object {
        "email": "bob@gmail.com",
        "id": 33,
        "name": "Bob",
      },
    ]
  }
  hideBottomPaginator={false}
  name="table"
  noDataMessage="There is no data"
  perPage={50}
  saveSettings={false}
  showRowNumber={true}
/>
`;

exports[`table simple.js 1`] = `
<Table
  className="ui unstackable compact table"
  columns={
    Array [
      Object {
        "label": "ID",
        "name": "id",
      },
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ]
  }
  data={
    Array [
      Object {
        "email": "mike@gmail.com",
        "id": 11,
        "name": "Mike",
      },
      Object {
        "email": "helen@gmail.com",
        "id": 22,
        "name": "Helen",
      },
      Object {
        "email": "bob@gmail.com",
        "id": 33,
        "name": "Bob",
      },
    ]
  }
  hideBottomPaginator={false}
  name="table"
  noDataMessage="There is no data"
  perPage={50}
  saveSettings={false}
  showRowNumber={false}
/>
`;

exports[`table with_no_data.js 1`] = `
<Table
  className="ui unstackable compact table"
  columns={
    Array [
      Object {
        "label": "ID",
        "name": "id",
      },
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ]
  }
  data={Array []}
  hideBottomPaginator={false}
  name="table"
  noDataMessage="No data"
  perPage={50}
  saveSettings={false}
  showRowNumber={false}
/>
`;

exports[`table with_pagination.js 1`] = `
<Table
  className="ui unstackable compact table"
  columns={
    Array [
      Object {
        "label": "ID",
        "name": "id",
      },
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ]
  }
  data={
    Array [
      Object {
        "email": "mike@gmail.com",
        "id": 11,
        "name": "Mike",
      },
      Object {
        "email": "helen@gmail.com",
        "id": 22,
        "name": "Helen",
      },
      Object {
        "email": "bob@gmail.com",
        "id": 33,
        "name": "Bob",
      },
    ]
  }
  hideBottomPaginator={false}
  name="table"
  noDataMessage="There is no data"
  perPage={2}
  saveSettings={false}
  showRowNumber={true}
/>
`;
